@@ -1,27 +1,48 @@
 
-var noop = function (x) { return x }
+var identity = function (x) { return x }
+var isArray = Array.isArray
+var anything = { parse: identity, build: identity }
 
-function type () {
-  var argParsers = []
-  var len = arguments.length - 1
-  for (var i = 0; i < len; i++) {
-    argParsers.push(arguments[i] || noop)
+function type (parse, build) {
+  if (arguments.length === 1) return type(parse.parse, parse.stringify)
+
+  var cached = function (src) {
+    if (typeof src === 'string') return parse(src)
+    else if (isArray(src)) return build(src)
+    else return null
   }
-  var builder = arguments[len] || noop
-  return function (fn) {
-    return function () {
-      var value
-      var args = []
-      for (var i = 0; i < len; i++) {
-        value = argParsers[i](arguments[i])
-        if (value === null) return null
-        else args.push(value)
-      }
-      return builder(fn.apply(null, args))
+  cached.parse = function (value) {
+    return isArray(value) ? value : cached(value)
+  }
+  cached.build = function (value) {
+    return isArray(value) ? cached(value) : null
+  }
+  return cached
+}
+
+function fn (parsers, builder, fn) {
+  var len = parsers.length
+  builder = builder || identity
+
+  return function () {
+    var value
+    var args = []
+    for (var i = 0; i < len; i++) {
+      value = parse(parsers[i], arguments[i])
+      if (value === null) return
+      args.push(value)
     }
+    return builder(fn.apply(null, args))
   }
 }
 
+function parse (parser, value) {
+  if (!(typeof value === 'string')) return value
+  return (parser || identity)(value)
+}
+
 module.exports = {
-  type: type
+  type: type,
+  fn: fn,
+  anything: anything
 }
