@@ -7,14 +7,14 @@ var up = function (x) { return x.toUpperCase() }
 var rev = function (x) { return x.substring(1) }
 var num = function (x) { return /^\d+$/.test(x) ? +x : null }
 
-vows.describe('type').addBatch({
+vows.describe('fn').addBatch({
   'simple': function () {
-    var fn = arr.type(up, rev)(noop)
+    var fn = arr.fn([up], rev, noop)
     assert.equal(fn('ab'), 'B')
   },
   'exclude nulls': function () {
     var add = function (n) { return n + 10 }
-    var fn = arr.type(num, null)(add)
+    var fn = arr.fn([num], null, add)
     assert.equal(fn(10), 20)
     assert.equal(fn('a'), null)
   }
